<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        />

    <TextView
        style="@style/headerTextStyle"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_margin="20dp"
        android:text="@string/toppings"/>

    <CheckBox
        android:id="@+id/whippedCreamCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whippedcream"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        />

    <CheckBox
        android:id="@+id/chocolateCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        />



    <TextView
        android:text="@string/quantity"
        android:fontFamily="sans-serif-condensed-light"
        style="@style/headerTextStyle"
        android:layout_margin="20dp"
        android:textAllCaps="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_view"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="+"
            android:textSize="20sp"
            android:onClick="increment"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2 "
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            />

        <Button
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="-"
            android:textSize="20sp"
            android:onClick="decrement"/>



    </LinearLayout>

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/order"
        android:onClick="submitOrder"
        />
</LinearLayout>
</ScrollView>